2004-01-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-types.h: operator[], operator+=, operator/=, unary operator-,
	operator==, operator!=: new.  Remove methods L1,L2,Linfty, move them to
	functions in nr-point-fns.{h,cpp}.  Rename Normalize to normalize with
	more sophisticated non-inline implementation in nr-types.cpp.
	* src/libnr/{nr-types.cpp,nr-point-fns.h,nr-point-fns.cpp}: new files.
	* src/libnr/nr-types-test.cpp: new unit test file.
	* src/libnr/Makefile.am: mention the new files.

	* src/Makefile.am: Add `check-recursive: all-recursive' dependency
	(and a comment with related discussion).

	* src/xml/Makefile.am: Append $(EXEEXT) to executables in TESTS.

	* src/verbs.cpp (sp_action_get_title): Get rid of fixed-sized buffer.

	* src/nodepath.cpp: Miscellaneous cleanups including fixing
	erroneous indentation, changing `g_list_length(foo) == 0' to `foo
	== NULL', removing unused function closest_of_three, specifying
	some functions as `static', adding doc.

	* src/inkscape.cpp (inkscape_remove_desktop): Change
	`g_slist_length (foo) == 0' to `foo == NULL'.

	* src/dyna-draw-context.cpp (fit_and_split_calligraphics): Fix the
	calculation of BEZIER_MAX_LENGTH.
	Add assertions that the corresponding buffers haven't been overrun.

2004-01-03  Ted Gould <ted@gould.cx>

	* src/helper/bezier-utils.cpp, src/inkscape-stock.h:
	  Fixing some Doxygen errors.

2004-01-03  MenTaLguY <mental@rydia.net>

	* src/inkscape.cpp, src/inkscape.h, src/main.cpp:
	  fixes to preference loading

	* src/uri-reference.h: documented Inkscape::URIReference

	* src/sp-item.cpp: fixed double hunref problem

	* src/sp-item.cpp, src/uri-references.h, src/uri-references.cpp:
	reworked Inkscape::URIReference a little

	* src/sp-item.cpp: masks now use Inkscape::URIReference as well

2004-01-02  MenTaLguY <mental@rydia.net>

	* src/shortcuts.cpp: zoom in shortcut fix for german and other
	  keyboards from schumaml

	* configure.in: added SigC++ 1.2 dependency
